# mna-notes

./: README.md
mna-001-analitica-ciencia-datos/: README.md
mna-001-analitica-ciencia-datos/extra/: ActividadActiveClass3.ipynb  DuckDB.ipynb  Email-EDA.ipynb  Polynomial_Regression.ipynb  Time_Series_Analysis.ipynb
mna-001-analitica-ciencia-datos/homeworks/: Actividad2analisisPandas.ipynb  Actividad3BDManipulacion.ipynb  Actividad4EDA.ipynb  Actividad5Preprocesamiento.ipynb  Actividad6FE_Equipo70.ipynb  Actividad7PCA_Equipo70.ipynb  Actividad8RLineal_Equipo70.ipynb  Actividad9RLog_Equipo70.ipynb
mna-002-aprendizaje-maquina/: README.md
mna-002-aprendizaje-maquina/homeworks/: MNA_IAyAA_Semana_7_Actividad_Learning_Curves.ipynb  MNA_IAyAA_semana_2_Actividad.ipynb  MNA_IAyAA_semana_3y4_Actividad.ipynb  MNA_IAyAA_semana_5_y_6_Actividad.ipynb  MNA_IAyAA_semana_8_Actividad_SistemasRecomendacion.ipynb
mna-003-vision-computadora/: README.md
mna-003-vision-computadora/scripts/: readimg.py  (+2 more)
mna-004-nlp/: README.md
mna-005-advanced-machine-learning/: README.md
mna-007-calidad-pruebas/: README.md
mna-008-generative-ai/: README.md
mna-009-big-data/: .gitignore  pyproject.toml
mna-009-big-data/examples/: Ejemplo3.ipynb  Ejemplo4.ipynb
mna-009-big-data/notebooks/: Tarea2_1.caracterization.ipynb  Tarea2_2.partitions.ipynb  Tarea2_3.rules.ipynb  Tarea3_1.learning.ipynb  Tarea4_1.metricas.ipynb  Tarea5_1.visualizaciones.ipynb  download.ipynb  flights_background.ipynb  flights_exploratory.ipynb  starter.ipynb
mna-010-proyecto-terminal/: .gitignore  pyproject.toml
(+66 files in other folders)
