[project]
name = "big-data-analytics"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "datasets (>=3.5.0,<4.0.0)",
    "findspark (>=2.0.1,<3.0.0)",
    "hdfs (>=2.7.3,<3.0.0)",
    "matplotlib (>=3.10.1,<4.0.0)",
    "scipy (>=1.15.2,<2.0.0)",
    "seaborn (>=0.13.2,<0.14.0)",
    "pyspark (==4.0.0)",
    "mwxml (>=0.3.6,<0.4.0)",
    "mwparserfromhell (>=0.7.2,<0.8.0)",
    "fastparquet (>=2024.11.0,<2025.0.0)",
    "pandas (>=2.3.1,<3.0.0)",
    "nltk (>=3.9.1,<4.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
